--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera! This is my site</title>
 </head>
 <body>
-<h1>Hello Coursera!</h1>
+<h1>Hello Coursera! It's a great course!</h1>
 </body>
 </html>
